# nala

./: Cargo.toml  README.md  README.rst  build.rs  justfile  nala.conf
debian/: _nala  bash-completion  nala.fish
docs/: nala-history.8.rst  nala.8.rst
src/: dpkg.rs  glob.rs  hashsum.rs  main.rs  progress.rs  summary.rs  terminal.rs
src/cli/: commands.rs  completion.rs  flags.rs  mod.rs  parser.rs
src/cmd/: fetch.rs  history.rs  install.rs  mod.rs  policy.rs  show.rs  traits.rs  update.rs  upgrade.rs
src/cmd/history/: mod.rs  model.rs  replay.rs  store.rs  tests.rs  view.rs
src/cmd/upgrade/: held.rs  hooks.rs  mod.rs
src/config/: color.rs  configuration.rs  file.rs  keys.rs  logger.rs  mod.rs  paths.rs
src/deb/: compress.rs  debfile.rs
src/download/: downloader.rs  mod.rs  uri.rs
src/libnala/: mod.rs  transaction.rs
src/tui/: fetch.rs  mod.rs  progress.rs  style.rs  summary.rs
src/tui/summary/: mod.rs  row.rs
src/util/: mod.rs  package.rs  patterns.rs  privilege.rs  prompt.rs  units.rs  version.rs
