[package]
name = "nala"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/volian/nala/-/tree/nala-rs"
readme = "README.rst"
description = "Commandline frontend for the APT package manager"

[dependencies]
rust-apt = { git = "https://gitlab.com/volian/rust-apt", features = ["serde"] }
# rust-apt = { path = "../rust-apt", features = ["serde"] }
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
nix = { version = "0.31.2", features = ["fs", "process", "term", "ioctl", "signal"] }
async-compression = { version = "0.4.42", features = ["tokio", "all-algorithms"] }
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.3", features = ["unstable-dynamic"] }
ratatui = { version = "0.30.0", features = ["serde"] }
comfy-table = { version = "7.2.2", features = ["tty", "custom_styling"] }
mio = { version = "1.2.0", features = ["os-ext"] }
indexmap = { version = "2.14.0", features = ["serde"] }
hcl = { package = "hcl-rs", version = "0.19.7" }
anyhow = "1.0.102"
regex = "1.12.3"
globset = "0.4.18"
serde_json = "1.0.149"
crossterm = "0.29.0"
sha2 = "0.11.0"
chrono = "0.4.44"
ansi-to-tui = "8.0.1"
tar = "0.4.45"
ar = "0.9.0"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap-markdown = "0.1.5"
clap_complete = { version = "4.6.3", features = ["unstable-dynamic"] }
clap_mangen = "0.3.0"

[profile.lto]
# A profile with various additional optimizations
inherits = "release"

# It isn't clear that lto makes anything faster yet
# But it does reduce the binary size. true = "fat", can also use "thin"
# This save a LOT of binary size.
lto = true

# Can't really tell if this changes anything
# This seems useless, at least in terms of file size.
# codegen-units = 1

# This causes it to not work on some machines?
# Saves about 1MB at the time of writing.
# Probably not good enough for not having the trace.
# panic = "abort"
